# ChangeLog for app-arch/libarchive
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/libarchive/ChangeLog,v 1.81 2010/04/12 15:57:59 ferringb Exp $

  24 Mar 2010; Pacho Ramos <pacho@gentoo.org> libarchive-2.7.1-r1.ebuild,
  libarchive-2.8.0.ebuild, libarchive-2.8.3.ebuild:
  Update homepage, see bug 310919

*libarchive-2.8.3 (15 Mar 2010)

  15 Mar 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -libarchive-2.8.1.ebuild, -files/libarchive-2.8.1+openssl.patch,
  +libarchive-2.8.3.ebuild:
  Version bump.

*libarchive-2.8.1 (07 Mar 2010)

  07 Mar 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -files/libarchive-2.6.0-nolibs.patch,
  -files/libarchive-2.6.1-headers.patch,
  -files/libarchive-2.7.0-fortified-sources.patch,
  -files/libarchive-2.7.0-pipe.patch, +libarchive-2.8.1.ebuild,
  +files/libarchive-2.8.1+openssl.patch:
  Version bump, add a patch to fix handling of OpenSSL checks.

*libarchive-2.8.0 (09 Feb 2010)

  09 Feb 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -libarchive-2.7.0-r1.ebuild, -libarchive-2.7.902a.ebuild,
  +libarchive-2.8.0.ebuild:
  Version bump, remove old versions.

  31 Jan 2010; Raúl Porcel <armin76@gentoo.org> libarchive-2.7.1-r1.ebuild:
  alpha/ia64/sh/sparc stable wrt #298563

  23 Jan 2010; Brent Baude <ranger@gentoo.org> libarchive-2.7.1-r1.ebuild:
  stable ppc, bug 298563

  14 Jan 2010; Markus Meier <maekke@gentoo.org> libarchive-2.7.1-r1.ebuild:
  arm stable, bug #298563

  11 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  libarchive-2.7.1-r1.ebuild:
  stable x86, bug 298563

  11 Jan 2010; Jeroen Roovers <jer@gentoo.org> libarchive-2.7.1-r1.ebuild:
  Stable for HPPA (bug #298563).

  10 Jan 2010; Brent Baude <ranger@gentoo.org> libarchive-2.7.1-r1.ebuild:
  stable ppc64, bug 298563

  09 Jan 2010; Pacho Ramos <pacho@gentoo.org> libarchive-2.7.1-r1.ebuild:
  amd64 stable, bug 298563

*libarchive-2.7.902a (05 Jan 2010)
