@@ -2,8 +2,10 @@ AUX libarchive-2.8.1+openssl.patch 2776 RMD160 5667ddf9555ed9d6e375b31a0aa4d6874
 DIST libarchive-2.7.1.tar.gz 1248222 RMD160 7a0b5747569452f015e94e54afa90ca85dfd7cca SHA1 3810ded09b2d248eab9754d008f0cf144f27848d SHA256 a7e066ef857d3db0211e2d916ca14aafc48a4776c4fa108fd67092ce862a7ba8
 DIST libarchive-2.8.0.tar.gz 1437217 RMD160 e49abd391e58ccbdc441670bb1a59752ecba406b SHA1 b29d47aac4efd66d89e581585e17644a3c77c5cf SHA256 e5be324c94e885e449b8ffb30a843372d557966547efff3f1d5f69eb5a119769
 DIST libarchive-2.8.3.tar.gz 1438099 RMD160 7c77a87cdfc096417f67182bfc74141eab61aea4 SHA1 e0634a326cce2b46c8dc637de84d7556257e59e0 SHA256 16095d15334b3c8dbb02db5af3d415f12c1c3bdd4eb43af7bbc36ab7572c0b7a
+DIST libarchive-2.8.4.tar.gz 1502828 RMD160 4df65456c9026cdcf05b285db33518f4ff734c6e SHA1 b9cc3bbd20bd71f996be9ec738f19fda8653f7af SHA256 86cffa3eaa28d3116f5d0b20284026c3762cf4a2b52b9844df2b494d4a89f688
 EBUILD libarchive-2.7.1-r1.ebuild 2660 RMD160 69bbcd61943a5b3f0f714d571dc193b06ef19d78 SHA1 61e9e5684621d0ed51ad294d472089e8f1b781e1 SHA256 5af3c0562067a8513a5b18e72b7c88b7559c9e5ab1fab2bd30f2272e031d5c85
 EBUILD libarchive-2.8.0.ebuild 2663 RMD160 1babc615b1b24e974c11dd519c4abb1989f246df SHA1 ae592f9a3bf4c22059570688d6d13de7556d9663 SHA256 80a6a532096725b4e8f0330ccebd6d41fb984a7e7efcc5146f4aa9bc603026c2
 EBUILD libarchive-2.8.3.ebuild 2663 RMD160 b3bf04004ef9def139071feaa1073a423657aaf2 SHA1 f967a18e5471e57fc55f61ed290b53604c097bda SHA256 9e733d025817802195d758e51986337145f463856c799b04824d62cfd0cdc066
-MISC ChangeLog 25599 RMD160 0013d738bb53af33d32bab56484928161eda9e34 SHA1 188f9e39c5d10f1b1b3f1f43774695a9405335fe SHA256 a42ce1d9041130dd866151771bbae3405fcd02652bbc63ad362e451473aa5f10
+EBUILD libarchive-2.8.4.ebuild 2666 RMD160 86ef5a1d8a44de06022bf6a64cd96d5f7eda8c5e SHA1 337fee36d0cd3141bf3eb97a0a7768a3fff3d90e SHA256 b5a98f076a05101ec7ec29f9aae000f37fc97a59de8fccfbcc1efadff961b978
+MISC ChangeLog 25737 RMD160 a99ad810092e96925abf42e800b1e5fb773e7bd7 SHA1 a5d5a6dad248d1b624c9e12c3dc82fa99e690f47 SHA256 dc1c94afa23168ebdaa5f0dd8113f42904f741059e13c340f1b9ea90a7427ef7
 MISC metadata.xml 1844 RMD160 5bcec086dcc0bc4ce8c6ecf8a5c3fc788d15d195 SHA1 4e5c8b5f27e9dd50d57aa6aa8d967b37eeb45480 SHA256 67659207b287ea7ce198ea177c8b9f103f60b672c8e00e9fc7e48c3356324a30
